--- a/4Forno.css
+++ b/4Forno.css
@@ -26,7 +26,7 @@ nav a {
     border-radius: 5px;
     background-color: #fff;
     display: inline-block;
-    position: relative;
+    position: flex;
 }
 
 section {
